# emception

./: .env  .gitignore  README.md  build-binaryen.sh  build-brotli.sh  build-cpython.sh  build-demo.sh  build-emception.sh  build-llvm.sh  build-packs.sh  build-quicknode.sh  build-tooling.sh  build-with-docker.sh  build.sh  package.json  patch-ninja.sh
.github/workflows/: build.yml  ci.yml
bundling/: emception.js  emception.worker.js  main.js  package.json  webpack.config.js
demo/: emception.js  index.js  package.json
demo-monaco/: package-lock.json
demo-syntax-training/: package.json  tsconfig.json  webpack.config.ts
demo-syntax-training/src/: App.tsx
demo-syntax-training/src/assignments/intro-cpp/: hello-world.ts
demo-syntax-training/src/components/: SyntaxTraining.tsx  emception.ts
docker/: Dockerfile
npm/: index.html  index.js  package-lock.json  package.json  webpack.config.js
packs/cpython/: sitecustomize.py
packs/emscripten/: emscripten.patch  make.sh  package.sh  split_packages.js
patches/: cpython.patch
quicknode/: CMakeLists.txt  main.cpp
tooling/: CMakeLists.txt
tooling/wasm-package/: compile.sh  wasm-package.cpp
tooling/wasm-transform/: compile.sh
webapp/: package.json
webapp/src/app/: emception.js  emception.worker.js  page.tsx
